<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home"/>
    <item
        android:id="@+id/charactersFragment"
        android:icon="@drawable/ic_characters"
        android:title="@string/title_characters" />
    <item
        android:id="@+id/booksFragment"
        android:icon="@drawable/ic_books"
        android:title="@string/title_books" />
    <item
        android:id="@+id/moviesFragment"
        android:icon="@drawable/ic_movies"
        android:title="@string/title_movies" />
    <item
        android:id="@+id/favoriteFragment"
        android:icon="@drawable/ic_heart"
        android:title="@string/title_favorite" />
</menu>